unpackaged/main/default/objects/Income__c/Income__c.object-meta.xml
<CustomObject>
    <label>Income</label>
    <nameField>
        <label>Income Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>