unpackaged/main/default/objects/Income__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>The Applicant must be related to the same Application.</errorMessage>
        <filterItems>
            <field>$Source.Application__c</field>
            <operation>equals</operation>
            <valueField>Applicant__c.Application__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Application__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>