unpackaged/main/default/objects/Income__c/fields/AssessedNotes__c.field-meta.xml
<CustomField>
    <fullName>AssessedNotes__c</fullName>
    <label>Assessed Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>