unpackaged/main/default/objects/Income__c/fields/IncomeAmount__c.field-meta.xml
<CustomField>
    <fullName>IncomeAmount__c</fullName>
    <description>Field to capture the income amount (Other income e.g.Bonus, Commission etc.) entered by an applicant.</description>
    <label>Income Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>