unpackaged/main/default/objects/Income__c/fields/IncomeFrequency__c.field-meta.xml
<CustomField>
    <fullName>IncomeFrequency__c</fullName>
    <label>Income Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>