unpackaged/main/default/objects/Income__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base salary</fullName>
            </value>
            <value>
                <fullName>Car allowance</fullName>
            </value>
            <value>
                <fullName>Regular overtime/shift allowance</fullName>
            </value>
            <value>
                <fullName>Rental income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>